// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Page Blocks should match snapshot for AMP 1`] = `
<DocumentFragment>
  <h1
    class="Headline-sc-1kh1qhu-0 bcVCel"
    id="content"
    tabindex="-1"
  >
    ያድምጡ
  </h1>
  <p
    class="Paragraph-k859h4-0 iVdzZk"
  >
    ዝግጅቶቻችንን’
  </p>
  <div
    class="MediaPlayerOuterWrapper-sc-1hns5mj-0 hdCRkd"
  >
    <div
      class="MediaPlayerInnerWrapper-sc-1hns5mj-1 cfTqqs"
    >
      <div
        class="StyledAudioContainer-sc-13p1a4d-1 bNktbX"
      >
        <amp-iframe
          allowfullscreen="allowfullscreen"
          frameborder="0"
          layout="fill"
          sandbox="allow-scripts allow-same-origin"
          scrolling="no"
          src="https://polling.test.bbc.co.uk/ws/av-embeds/media/bbc_amharic_radio/liveradio/am/amp"
          title="Audio player"
        >
          <amp-img
            alt=""
            attribution=""
            height="16"
            layout="fill"
            placeholder="true"
            src="http://localhost:7080/images/amp_audio_placeholder.png"
            width="9"
          />
        </amp-iframe>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Radio Page Blocks should match snapshot for Canonical 1`] = `
<DocumentFragment>
  <h1
    class="Headline-sc-1kh1qhu-0 bcVCel"
    id="content"
    tabindex="-1"
  >
    ያድምጡ
  </h1>
  <p
    class="Paragraph-k859h4-0 iVdzZk"
  >
    ዝግጅቶቻችንን’
  </p>
  <div
    class="MediaPlayerOuterWrapper-sc-1hns5mj-0 hdCRkd"
  >
    <div
      class="MediaPlayerInnerWrapper-sc-1hns5mj-1 cfTqqs"
    >
      <div
        class="StyledAudioContainer-sc-13p1a4d-1 bNktbX"
      >
        <iframe
          allow="autoplay; fullscreen"
          allowfullscreen=""
          class="StyledIframe-fuo2ed-0 jQWQE"
          scrolling="no"
          src="https://polling.test.bbc.co.uk/ws/av-embeds/media/bbc_amharic_radio/liveradio/am"
          title="Audio player"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
